fixed svg behind text

--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,9 @@ body {
 svg {
   position: absolute;
   right: 15%;
+  z-index: 1;
+  
+  
 }
 
 .v-graduate {
@@ -75,6 +78,7 @@ img {
 
 .card-item {
   padding: 5px 20px;
+  z-index: 10;
 }
 
 .hero {
